Bug 305395 - Untranslatable unit name "n" in statistics plots
Summary: Untranslatable unit name "n" in statistics plots
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-18 14:35 UTC by Alexander Potashev
Modified: 2012-09-20 22:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2012-08-18 14:35:29 UTC
The following strings are not translatable. I would probably not translate then in Russian of course, i.e. keep "n", but I guess translators to Chinese may benefit from making these strings translatable.

plugins/stats/ConnsTabPage.cc:53:               pmConnsChtWgt->setUnitName("n");
plugins/stats/ConnsTabPage.cc:54:               pmDhtChtWgt->setUnitName("n");

Reproducible: Always
Comment 1 Joris Guisson 2012-09-17 12:08:00 UTC
Git commit 41ac9e42d93dca17318f3af64ca11b0987294dc3 by Joris Guisson.
Committed on 17/09/2012 at 14:07.
Pushed by guisson into branch 'master'.

Use translatable unit names in connections stats graph

M  +1    -0    ChangeLog
M  +2    -2    plugins/stats/ConnsTabPage.cc
M  +1    -1    plugins/stats/drawer/KPlotWgtDrawer.cc

http://commits.kde.org/ktorrent/41ac9e42d93dca17318f3af64ca11b0987294dc3
Comment 2 Alexander Potashev 2012-09-17 20:40:33 UTC
You've just made a regression by changing "renderToImage" to "RenderToImage". The slot function is named "renderToImage".
Comment 4 Alexander Potashev 2012-09-20 22:55:01 UTC
You are right, sorry.