Use translatable unit names in connections stats graph

BUG: 305395